@@ -68,6 +68,8 @@
     semi-transparent.
 55. For non-touch devices only show menu buttons when hover over item.
 56. Clicking on header in grid view shows menu, as per list view.
+57. In 'Information' dialog only allow starting a scan if it's at least 3
+    seconds since previous (if any).
 
 4.0.4
 -----
